--- a/hospital-management-web/src/main/webapp/patients.xhtml
+++ b/hospital-management-web/src/main/webapp/patients.xhtml
@@ -1,69 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
-
-<h:body>
-	<h3>Hello #{loginBean.username} !</h3>
-
-	<h1>Patients Admin Page</h1>
-
-	<h2>Add a new patient</h2>
-	<h:form>
-		<h:panelGrid columns="3">
-			<h:outputText value="First name" />
-			<h:inputText id="firstname" value="#{patientBean.newPatient.firstname}" required="true" requiredMessage="Please enter firstname" />
-			<h:message for="firstname" errorClass="errorMessage" style="color:red" />
-			
-			<h:outputText value="Last name" />
-			<h:inputText id="lastname" value="#{patientBean.newPatient.lastname}" required="true" requiredMessage="Please enter lastname" />
-			<h:message for="lastname" errorClass="errorMessage" style="color:red" />
-			
-			<h:outputText value="Email" />
-			<h:inputText id="email" value="#{patientBean.newPatient.email}" required="true" requiredMessage="Please enter email" />
-			<h:message for="email" errorClass="errorMessage" style="color:red" />
-			
-			<h:outputText value="Date of birth" />
-			<h:inputText id="dateOfBirth" value="#{patientBean.newPatient.dateOfBirth}" required="true" requiredMessage="Please enter Date of birth">
-				<f:convertDateTime pattern="yyyy/dd/MM" />
-		  	</h:inputText>
-			<h:message for="dateOfBirth" errorClass="errorMessage" style="color:red" />
-			
-			<h:outputText value="Mobile Number" />
-			<h:inputText id="mobileNumber" value="#{patientBean.newPatient.mobileNumber}" required="true" requiredMessage="Please enter mobileNumber" />
-			<h:message for="mobileNumber" errorClass="errorMessage" style="color:red" />
-			
-			<h:outputText value="Insurance Type" />
-			<h:selectOneMenu id="insuranceType" value="#{patientBean.newPatient.insuranceType}">
-				<f:selectItems value="#{patientBean.insuranceTypeValues}" var="insuranceType" itemValue="#{insuranceType}" itemLabel="#{insuranceType.value}"/>
-			</h:selectOneMenu>
-			<br/>
-			<br/>
-			<h:commandButton value="Add" action="#{patientController.addNewPatient}" />
-		</h:panelGrid>
-		<h:messages styleClass="errorMessage"  style="color:red" globalOnly="true" />
-	</h:form>
-
-	<h:dataTable value="#{patientBean.patients}" var="patient" styleClass="patientTable" headerClass="patientTableHeader" rowClasses="patientTableOddRow,patientTableEvenRow">
-		<h:column>
-			<f:facet name="header">firstname</f:facet>
-		      	#{patient.firstname}
-		   	</h:column>
-		<h:column>
-			<f:facet name="header">lastname</f:facet> 
-				#{patient.lastname}
-		   	</h:column>
-		<h:column>
-			<f:facet name="header">email</f:facet>
-		      	#{patient.email}
-		   	</h:column>
-	</h:dataTable>
-	<br />
-	<h:form>
-		<h:commandButton action="welcome?faces-redirect = true" value="Back To Welcome Page" />
-	</h:form>
-</h:body>
-
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"  
+      xmlns:h="http://java.sun.com/jsf/html"  
+      xmlns:f="http://java.sun.com/jsf/core"  
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">  
+ 
+    <ui:composition template="/templates/main/patientsMain.xhtml">
+        <ui:define name="content">            
+        </ui:define>
+    </ui:composition>
+ 
 </html>
