--- a/hospital-management-web/src/main/webapp/welcome.xhtml
+++ b/hospital-management-web/src/main/webapp/welcome.xhtml
@@ -1,23 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"    
-      xmlns:h="http://java.sun.com/jsf/html">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"  
+      xmlns:h="http://java.sun.com/jsf/html"  
+      xmlns:f="http://java.sun.com/jsf/core"  
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">  
  
-    <h:body>
-        <h3>Hello #{loginBean.username} !</h3>
-        <h:form>
-			<h3>Patients Page</h3>
-			<h:commandButton action="#{patientController.showPatients}" value="Go" />
-<!-- 			<h3>Add new patient</h3> -->
-<!-- 			<h:commandButton action="addPatient?faces-redirect = true" value="Go" /> -->
-			<br/>
-			
-			<h3>Doctors Page</h3>
-			<h:commandButton action="#{doctorController.showDoctors}" value="Go" />
-<!-- 			<h3>Add new doctor</h3> -->
-<!-- 			<h:commandButton action="addDoctor?faces-redirect = true" value="Go" /> -->
-		</h:form>
-    </h:body>
+    <ui:composition template="/templates/main/welcomeMain.xhtml">
+        <ui:define name="content">            
+        </ui:define>
+    </ui:composition>
  
 </html>
